Add a CSS file to style the landing page

--- a/index.html
+++ b/index.html
@@ -10,29 +10,22 @@
   <body>
 
     <div class="header">
-      <div class="left-header">
-        Header Logo
-      </div>
-      <div class="right-header">
-        <ul>
-          <li>header link one</li>
-          <li>header link two</li>
-          <li>header link three</li>
-        </ul>
-      </div>
+      <div class="logo">Header Logo</div>
+      <ul>
+        <li><a href="#">header link one</a></li>
+        <li><a href="#">header link two</a></li>
+        <li><a href="#">header link three</a></li>
+      </ul>
     </div>
 
     <div class="top-bloc">
       <div class="top-bloc-content">
-        <div class="top-bloc-title">
-          This website is awsome
-        </div>
+        <div class="top-bloc-title">This website is awsome</div>
         <div class="top-bloc-description">
-          This website has some subtext that goes here under the main title. It's a smaller and the color is lower contrast
+          This website has some subtext that goes here under the main title.
+          It's a smaller font and the color is lower contrast
         </div>
-        <div class="top-bloc-button">
-          Sign up
-        </div>
+        <button class="top-bloc-button">Sign up</button>
       </div>
       <div class="top-bloc-image">
         this is a placeholder for an image
@@ -45,7 +38,7 @@
       </div>
       <div class="mid-top-bloc-content">
         <div class="mid-top-bloc-box">
-          <div class="mid-top-bloc-img"></div>
+          <div class="mid-top-bloc-img"> </div>
           <div class="mid-top-bloc-txt">this is some subtext under an illustration or image</div>
         </div>
         <div class="mid-top-bloc-box">
@@ -62,6 +55,7 @@
         </div>
       </div>
     </div>
+
     <div class="mid-bot-bloc">
       <div class="mid-bot-bloc-content">
         This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
@@ -71,10 +65,12 @@
 
     <div class="bot-bloc">
       <div class="bot-bloc-card">
-        <div class="bot-bloc-title"></div>
-        <div class="bot-bloc-content"></div>
-        <div class="bot-bloc-button"></div>
+        <div class="bot-bloc-title">Call to action! It's time!</div>
+        <div class="bot-bloc-content">
+          Sign up for our product by clicking that button right over there!
+        </div>
       </div>
+      <button class="bot-bloc-button">Sign up</button>
     </div>
 
     <div class="footer">
